syntax = 'proto3';

import "google/protobuf/wrappers.proto";

package backend;
option java_multiple_files = true;
option java_package = 'backend';
option java_outer_classname = 'RetrieverProto';

service Retriever {

  //Should also be included in the frontend
  rpc saveFiles(stream Chunk) returns (UploadStatus) {}

  rpc getStructure(StructureRequest) returns (Structure) {} //should show filestructure and contents

  rpc getFiles(DownloadRequest) returns (stream Chunk) {} //should be able to send multiple files at once

  //should also be included in the authenticator
  rpc logIn(User) returns (AuthenticationStatus) {}

  rpc authenticate(Token) returns (AuthenticationStatus) {}
}

message FileDescription {
  string FileName = 1;
  string Bucket = 2; //Probably not a good idea to sen password all the time
}

enum UploadStatusCode {
  Unknown = 0;
  Ok = 1;
  Failed = 2;
}

message UploadStatus {
  UploadStatusCode Code = 1;
}

message Chunk {
  FileDescription FileDescription = 1; //For metadata -> Also needs description of where the file is actually saved -> maybe just do something like collections for now
  bytes Content = 2;
}

message User {
  string pass = 1;
}

message StructureRequest { //Needs more when multiple levels are added
  string bucket = 1;
  string directory = 2;
}

message Directory {
  string Name = 1;
  repeated string FileName = 2;
}

message Structure {
  repeated Object Object = 1;
}

message Object {
  string name = 1;
  string type = 2;
}

message DownloadRequest {
  FileDescription FileDescription = 1;
}

enum AuthenticationStatusCode {
  Success = 0;
  Failure = 1;
}

message Token {
  string token = 1;
}

message AuthenticationStatus {
  AuthenticationStatusCode Code = 1;
  string bucket = 2;
}